// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add new post Should not render Modal 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={false}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffff",
            "borderRadius": 5,
            "height": 500,
            "width": "90%",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "rgba(76, 154, 42, 1)",
            "fontSize": 20,
            "fontWeight": "bold",
            "paddingTop": 20,
          }
        }
      >
        Create a new post
      </Text>
      <RCTScrollView
        style={
          Object {
            "flex": 1,
            "padding": 20,
            "width": "100%",
          }
        }
      >
        <View>
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            placeholder="Title for post (3-4 words)"
            rejectResponderTermination={true}
            style={
              Object {
                "borderColor": "black",
                "borderWidth": 0.2,
                "marginTop": 20,
                "textAlign": "center",
              }
            }
            underlineColorAndroid="transparent"
            value=""
          />
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            placeholder="Description of post (explain the issue)"
            rejectResponderTermination={true}
            style={
              Object {
                "borderColor": "black",
                "borderWidth": 0.2,
                "marginBottom": 20,
                "marginTop": 20,
                "textAlign": "center",
              }
            }
            underlineColorAndroid="transparent"
            value=""
          />
          <Image
            source={
              Object {
                "uri": "data:image/jpeg;base64,",
              }
            }
            style={
              Object {
                "alignSelf": "center",
                "height": 100,
                "marginBottom": 20,
                "width": 100,
              }
            }
          />
          <View
            accessibilityRole="button"
            accessibilityState={Object {}}
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {},
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#007AFF",
                      "fontSize": 18,
                      "margin": 8,
                      "textAlign": "center",
                    },
                    Object {
                      "color": "rgba(76, 154, 42, 1)",
                    },
                  ]
                }
              >
                add image
              </Text>
            </View>
          </View>
        </View>
      </RCTScrollView>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(76, 154, 42, 1)",
            "borderBottomLeftRadius": 5,
            "borderBottomRightRadius": 5,
            "bottom": 0,
            "height": "10%",
            "justifyContent": "center",
            "opacity": 1,
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 20,
              "fontWeight": "bold",
            }
          }
        >
          Post
        </Text>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`Add new post Should render modal 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={true}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffff",
            "borderRadius": 5,
            "height": 500,
            "width": "90%",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "rgba(76, 154, 42, 1)",
            "fontSize": 20,
            "fontWeight": "bold",
            "paddingTop": 20,
          }
        }
      >
        Create a new post
      </Text>
      <RCTScrollView
        style={
          Object {
            "flex": 1,
            "padding": 20,
            "width": "100%",
          }
        }
      >
        <View>
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            placeholder="Title for post (3-4 words)"
            rejectResponderTermination={true}
            style={
              Object {
                "borderColor": "black",
                "borderWidth": 0.2,
                "marginTop": 20,
                "textAlign": "center",
              }
            }
            underlineColorAndroid="transparent"
            value=""
          />
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            placeholder="Description of post (explain the issue)"
            rejectResponderTermination={true}
            style={
              Object {
                "borderColor": "black",
                "borderWidth": 0.2,
                "marginBottom": 20,
                "marginTop": 20,
                "textAlign": "center",
              }
            }
            underlineColorAndroid="transparent"
            value=""
          />
          <Image
            source={
              Object {
                "uri": "data:image/jpeg;base64,",
              }
            }
            style={
              Object {
                "alignSelf": "center",
                "height": 100,
                "marginBottom": 20,
                "width": 100,
              }
            }
          />
          <View
            accessibilityRole="button"
            accessibilityState={Object {}}
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {},
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#007AFF",
                      "fontSize": 18,
                      "margin": 8,
                      "textAlign": "center",
                    },
                    Object {
                      "color": "rgba(76, 154, 42, 1)",
                    },
                  ]
                }
              >
                add image
              </Text>
            </View>
          </View>
        </View>
      </RCTScrollView>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(76, 154, 42, 1)",
            "borderBottomLeftRadius": 5,
            "borderBottomRightRadius": 5,
            "bottom": 0,
            "height": "10%",
            "justifyContent": "center",
            "opacity": 1,
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 20,
              "fontWeight": "bold",
            }
          }
        >
          Post
        </Text>
      </View>
    </View>
  </View>
</Modal>
`;
